# python_asyncio

./: .gitignore  1_blocking.py  README.md  pyproject.toml  requirements.txt
0_async/: 2_sync_sum.py
0_async/server/: 3_sync_requests.py  flask_server.py
0_asyncio/: 0_blocking.py  1_async_with_run.py  2_sync_sum.py  3_sync_requests.py  4_event_loop.py  helpers.py
1_chat/: 1_blocking.py  2_select.py  3_selectors.py  client.py
2_chat_with_loop/: client.py  logger.py  loop.py  round_robin.py  server.py
3_tornado_benchmark/: fetch_wiki.py  flask_server.py  tornado_server.py
