[tool.poetry]
name = "aio_wsh"
version = "0.1.0"
description = ""
authors = ["Vlad <vl.hutsal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.5"
aiohttp = "^3.7.4"
requests = "^2.26.0"
tornado = "^6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
